--- a/index.html
+++ b/index.html
@@ -11,35 +11,43 @@
 </head>
 <body>
     <div class="container">
-        <div class="display"></div>
-        <div class="numpad">
-            <div class="row">
-                <button class="button" style="width:50%;">Clear</button>
-                <button class="button" style="width:50%;">Delete</button>
+        <div class="calculator">
+            <div class="display">
+                
             </div>
-            <div class="row">
-                <button class="button numbers" id="seven">7</button>
-                <button class="button numbers" id="eight">8</button>
-                <button class="button numbers" id="nine">9</button>
-                <button class="button operators" id="plus">+</button>
-            </div>
-            <div class="row">
-                <button class="button numbers" id="four">4</button>
-                <button class="button numbers" id="five">5</button>
-                <button class="button numbers" id="six">6</button>
-                <button class="button operators" id="minus">-</button>
-            </div>
-            <div class="row">
-                <button class="button numbers" id="one">1</button>
-                <button class="button numbers" id="two">2</button>
-                <button class="button numbers" id="three">3</button>
-                <button class="button operators" id="multiply">*</button>
-            </div>
-            <div class="row">
-                <button class="button operators" id="dot">.</button>
-                <button class="button numbers" id="zero">0</button>
-                <button class="button operators" id="equals">=</button>
-                <button class="button operators" id="divide">/</button>
+            <div class="keyboard">
+                <div class="control-buttons">
+                    <button id="delete">Delete</button>
+                    <button id="clear">Clear</button>
+                </div>
+                <div class="operators">
+                    <button id="plus">+</button>
+                    <button id="minus">-</button>
+                    <button id="multiply">*</button>
+                    <button id="divide">/</button>
+                </div>
+                <div class="numbers">
+                    <div class="row">
+                        <button id="7" data-number="7">7</button>
+                        <button id="8" data-number="8">8</button>
+                        <button id="9" data-number="9">9</button>
+                    </div>
+                    <div class="row">
+                        <button id="4" data-number="4">4</button>
+                        <button id="5" data-number="5">5</button>
+                        <button id="6" data-number="6">6</button>
+                    </div>
+                    <div class="row">
+                        <button id="1" data-number="1">1</button>
+                        <button id="2" data-number="2">2</button>
+                        <button id="3" data-number="3">3</button>
+                    </div>
+                    <div class="row">
+                        <button id="point">.</button>
+                        <button id="0" data-number="0">0</button>
+                        <button id="equals">=</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
